nettoyage dashboard et vue d'ensemble

--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -215,7 +215,7 @@
                             <p class="card-text text-muted">
                                 Consultez un tableau de bord complet des engagements par commune et catégorie
                             </p>
-                            <a href="{{ path('app_overview') }}" class="btn btn-success">
+                            <a href="#" class="btn btn-success">
                                 Voir le tableau de bord
                             </a>
                         </div>
